--- a/live-chat-client-electron-v2/src/components/common/window-top-bar/window-top-bar.styl
+++ b/live-chat-client-electron-v2/src/components/common/window-top-bar/window-top-bar.styl
@@ -12,3 +12,8 @@
     display flex
     justify-content center
     align-items center
+    color white
+
+    &:hover
+      cursor pointer
+      background-color $green-2
