--- a/live-chat-client-electron-v2/src/components/window-top-bar/window-top-bar.styl
+++ b/live-chat-client-electron-v2/src/components/window-top-bar/window-top-bar.styl
@@ -20,7 +20,7 @@
 
 #window-top-bar
   width 100%
-  height 25px
+  // height 25px
   position relative
   display flex
   justify-content space-between
