gmw, todo: 会话列表的完善

--- a/live-chat-client-electron-v2/src/css/app.styl
+++ b/live-chat-client-electron-v2/src/css/app.styl
@@ -1,1 +1,8 @@
 /* app global css */
+.flex-end
+  display flex
+  justify-content flex-end
+  align-items center
+
+.click-hover:hover
+  cursor pointer
