--- a/live-chat-client-electron-v2/src/css/quasar.variables.styl
+++ b/live-chat-client-electron-v2/src/css/quasar.variables.styl
@@ -1,6 +1,8 @@
-$green-1 ?= #4dc795 // 绿色 主题色
+$green-1 ?= #58e1a8 // 绿色 主题色
 $green-2 ?= #40a57c // 深绿色 用于绿色基础上选中
 
 $black-1 ?= #444 // 黑色 用于字体
 
 $gray-1 ?= #eee // 灰色 用于白色基础上选中
+$gray-2 ?= #f1f1f1 // 打底背景灰色
+$gray-3 ?= #999 // 打底灰色背景基础上，字体颜色灰色
