--- a/live-chat-client-electron-v2/src/layouts/main-layout/main-layout.styl
+++ b/live-chat-client-electron-v2/src/layouts/main-layout/main-layout.styl
@@ -2,3 +2,84 @@
   color $black-1
   height 100vh
   width 100%
+
+#main-layout-content
+  display flex
+
+  #content-list
+    height 100%
+    width 270px
+
+    #msg-overview
+      padding 10px
+      display flex
+      box-sizing border-box
+      justify-content space-between
+      align-items center
+      background-color $gray-2
+
+      .icon-button
+        color $gray-3
+        font-size 1.8em
+        margin-left .5em
+
+        &:hover
+          color $black-1
+          cursor pointer
+
+    #search-input-wrapper
+      font-size 14px
+      height 2em
+      display flex
+      justify-content flex-start
+      align-items center
+      padding-left 1em
+      padding-right 1em
+
+      .search-input-icon
+        font-size 1.5em
+        color $gray-3
+
+      input
+        border 0
+        width calc(100% - 1.5em)
+        font-size .9em
+
+        &::-webkit-input-placeholder
+          color $gray-3
+          font-size .9em
+
+        &:focus
+          outline 0
+
+      .search-input-clear
+        font-size 1.2em
+        color $gray-3
+
+        &:hover
+          color $black-1
+    
+    #content-list-main
+      height calc(100% - 93px)
+      position relative
+
+      .scroll-area
+        // height 100%
+        width 100%
+
+  #content-pane
+    height 100%
+    width calc(100% - 270px)
+
+#status-mark
+  width 12px
+  height 12px
+  position absolute
+  background-color $green-1
+  border-radius 50%
+  bottom 0
+  right 0
+  z-index 100
+
+  &:hover
+    cursor context-menu
