[done: 朋友列表的显示] [todo: ①朋友列表悬浮详细信息；②朋友/群聊/会话三个列表的所有相关数据提取到vuex]

--- a/live-chat-client-electron-v2/src/css/quasar.variables.styl
+++ b/live-chat-client-electron-v2/src/css/quasar.variables.styl
@@ -6,3 +6,4 @@ $black-1 ?= #444 // 黑色 用于字体
 $gray-1 ?= #eee // 灰色 用于白色基础上选中
 $gray-2 ?= #f1f1f1 // 打底背景灰色
 $gray-3 ?= #999 // 打底灰色背景基础上，字体颜色灰色
+$gray-4 ?= #ddd // 更深的背景灰色
