--- a/live-chat-client-electron-v2/src/components/user-avatar/user-avatar.styl
+++ b/live-chat-client-electron-v2/src/components/user-avatar/user-avatar.styl
@@ -7,6 +7,7 @@
   .user-avatar-hover
     border 2px solid #00000000
     box-sizing content-box
+    transition: border-color .3s;
 
     &:hover
       border-color $green-1
