--- a/live-chat-client-electron-v2/src/css/app.styl
+++ b/live-chat-client-electron-v2/src/css/app.styl
@@ -11,3 +11,9 @@
   overflow hidden
   text-overflow ellipsis
   white-space nowrap
+
+// 修改quasar组件q-list > q-item的基本样式
+.q-item-style
+  font-size .9em
+  padding 5px 10px
+  min-height 40px
