--- a/live-chat-client-electron-v2/src/pages/sub-window/user-group-search/user-group-search.styl
+++ b/live-chat-client-electron-v2/src/pages/sub-window/user-group-search/user-group-search.styl
@@ -18,7 +18,11 @@
       width auto
       height 40px
 
-  #search-content
+  #search-content-panel
     display flex
-    justify-content space-evenly
-    flex-wrap wrap
+    flex-grow 1
+
+    .search-content
+      display flex
+      justify-content flex-start
+      flex-wrap wrap
