--- a/live-chat-client-electron-v2/src/css/quasar.variables.styl
+++ b/live-chat-client-electron-v2/src/css/quasar.variables.styl
@@ -7,3 +7,4 @@ $gray-1 ?= #eee // 灰色 用于白色基础上选中
 $gray-2 ?= #f1f1f1 // 打底背景灰色
 $gray-3 ?= #999 // 打底灰色背景基础上，字体颜色灰色
 $gray-4 ?= #ddd // 更深的背景灰色
+$gray-5 ?= #575757 // 更深的字体灰色
