--- a/live-chat-client-electron-v2/src/pages/sub-window/sign-in-on/sign-in-on.styl
+++ b/live-chat-client-electron-v2/src/pages/sub-window/sign-in-on/sign-in-on.styl
@@ -11,8 +11,30 @@
 
   #content-submit
     width 100%
+    margin-top 2em
     display flex
     justify-content flex-end
+    align-items baseline
+
+    #registration-link
+      color $gray-3
+      margin-right auto
+      
+      &:hover
+        text-decoration underline
+        cursor pointer
+
+    .my-btn-text
+      background-color inherit 
+      border 0
+      color $gray-3
+
+      &:focus
+        outline none
+
+      &:hover
+        text-decoration underline
+        cursor pointer
 
     .my-btn
       background-color $green-1
@@ -31,3 +53,13 @@
       &:hover
         cursor pointer
         background-color $green-2
+
+#qr-code-wrapper
+  width 240px
+  height 240px
+  overflow hidden
+  margin 20px auto 0
+
+  img
+    width 100%
+    height 100%
